Make pipeline non static and allow parallel tests (#453)
* Make pipeline non static

* Make JSquish non static and allow all tests to be parallel

* Make pipeline worker thread name clearer

* Remove unnecessary lombok